--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
        <title>Document</title>
 </head>
 <body>
-    <div class="alert alert-primary" role="alert">
-        <a href="https://getbootstrap.com/">Zu Bootstrap 5</a>
+    <!-- As a link -->
+<nav class="navbar navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" target="_blank" href="https://www.youtube.com/watch?v=V0bXqLxIivo&list=PL_bZpVNUyGJAb6LT7lUgL25huyBA2jL7z&index=1&t=195s">Lerne Git in 30 Minuten // Git Tutorial Deutsch
+    </a>
     </div>
-    <hr />
-    <button type="button" class="btn btn-primary">Primary</button>
-   
+  </nav>
 
  <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
