--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     </div>
   </nav>
 
+  <!--Select-->
+  <select class="form-select" aria-label="Default select example">
+    <option selected>Open this select menu</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+  </select>
+
 <!--blablaBlablal-->
 
  <!-- JavaScript Bundle with Popper -->
