--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <!--Select-->
   <select class="form-select" aria-label="Default select example">
     <option selected>Open this select menu</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
+    <option value="1">Oans</option>
+    <option value="2">Zwoa</option>
+    <option value="3">Drei</option>
   </select>
 
 <!--blablaBlablal-->
