--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-       <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--CSS file hinzufügen-->
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Document</title>
 </head>
+
 <body>
+  <p>Einfacher Css Test ALT + Shift + F</p>
+  <h1>Auto Format: ALT + Shift + F</h1>
+
   <!--Testeintrag!! Mit Vanille Souße Hahhah-->
-    <!-- As a link -->
-<nav class="navbar navbar-dark bg-primary">
+  <!-- As a link -->
+  <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" target="_blank" href="https://www.youtube.com/watch?v=V0bXqLxIivo&list=PL_bZpVNUyGJAb6LT7lUgL25huyBA2jL7z&index=1&t=195s">Lerne Git in 30 Minuten // Git Tutorial Deutsch
-    </a>
+      <a class="navbar-brand" target="_blank"
+        href="https://www.youtube.com/watch?v=V0bXqLxIivo&list=PL_bZpVNUyGJAb6LT7lUgL25huyBA2jL7z&index=1&t=195s">Lerne
+        Git in 30 Minuten // Git Tutorial Deutsch
+      </a>
     </div>
   </nav>
 
@@ -27,12 +36,15 @@
     <option value="3">Drei</option>
   </select>
 
-<!--blablaBlablal-->
+  <!--blablaBlablal-->
 
- <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
+
+    <script src="script.js"></script>
 </body>
+
 </html>
