--- a/index.html
+++ b/index.html
@@ -5,17 +5,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!--CSS file hinzufügen-->
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <!-- CSS only -->
+
+  <!-- Bootstrap CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!--Google Fonts-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   <title>Document</title>
 </head>
 
 <body>
-  <p>Einfacher Css Test ALT + Shift + F</p>
-  <h1>Auto Format: ALT + Shift + F</h1>
+  <p class="p1">Einfacher Css Test aus Styles.css </p>
+
+  <!--Alerts with Icons-->
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+      <path
+        d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+    </symbol>
+  </svg>
+
+  <div class="alert alert-primary d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
+      <use xlink:href="#info-fill" />
+    </svg>
+    <div>
+      Auto Format: ALT + Shift + F
+    </div>
+  </div>
+
+  <div class="alert alert-primary d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
+      <use xlink:href="#info-fill" />
+    </svg>
+    <div>
+      Live Server: ALT+L ALT+O (open) öffnen / ALT+L ALT+C (close) schließen
+    </div>
+  </div>
+  <!--Alerts with Icons ende-->
 
   <!--Testeintrag!! Mit Vanille Souße Hahhah-->
   <!-- As a link -->
@@ -44,7 +75,7 @@
     crossorigin="anonymous"></script>
 
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
