--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <option value="1">Oans</option>
     <option value="2">Zwoa</option>
     <option value="3">Drei</option>
+    <option value="4">Vier</option>
   </select>
 
   <!--blablaBlablal-->
