--- a/Bootstrap01.html
+++ b/Bootstrap01.html
@@ -9,205 +9,19 @@
   </head>
   <body>
     
-    <div class="row">
-        <div class="col-md-4">
-            <!-- Kundennummer -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnKundennr" class="col-md-4 control-label">Kundennummer:</label>
-                <div class="col-md-4">
-                    <input type="text" id="vnKundennr" name="vnKundennr" class="form-control" placeholder="Kundennummer" aria-label="Kundennummer" [(ngModel)]="vn.kundennr" />
-                </div>
-            </div>
-            <!-- Anrede / Titel -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnAnrede" class="col-md-4 control-label">Anrede/Titel:</label>
-                <!-- Anrede -->
-                <div class="col-md-4">
-                    <select id="vnAnrede" name="vnAnrede" class="form-control" aria-label="Anrede" [(ngModel)]="vn.anrede">
-                        <option [value]="0" disabled hidden>Anrede</option>
-                        <option [value]="1">Herr</option>
-                        <option [value]="2">Frau</option>
-                        <option [value]="3">Familie</option>
-                        <option [value]="4">Firma</option>
-                    </select>
-                </div>
-                <!-- Titel -->
-                <div class="col-md-4">
-                    <input type="text" id="vnTitel" name="vnTitel" class="form-control" placeholder="Titel" aria-label="Titel" [(ngModel)]="vn.titel" />
-                </div>
-            </div>
-            <!-- Vorname -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnVorname" class="col-md-4 control-label">Vorname:</label>
-                <div class="col-md-8">
-                    <input type="text" id="vnVorname" name="vnVorname" class="form-control" [ngClass]="{required: modus == 'angebot' || modus == 'antrag'}" placeholder="Vorname" aria-label="Vorname" [(ngModel)]="vn.vorname" #vnVorname="ngModel" [required]="modus == 'angebot' || modus == 'antrag' ? 'required' : null" />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnVorname.invalid && (vnVorname.dirty || vnVorname.touched)">
-                        <span *ngIf="vnVorname.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- Nachname -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnNachname" class="col-md-4 control-label">Nachname:</label>
-                <div class="col-md-8">
-                    <input type="text" id="vnNachname" name="vnNachname" class="form-control" [ngClass]="{required:modus == 'angebot' || modus == 'antrag'}" placeholder="Nachname" aria-label="Nachname" [(ngModel)]="vn.nachname" #vnNachname="ngModel" [required]="modus == 'angebot' || modus == 'antrag' ? 'required' : null" />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnNachname.invalid && (vnNachname.dirty || vnNachname.touched)">
-                        <span *ngIf="vnNachname.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- Geburtsdatum -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnGebDatum" class="col-md-4 control-label">Geburtsdatum:</label>
-                <div class="col-md-8">
-                    <input type="date" id="vnGebDatum" name="vnGebDatum" class="form-control" [ngClass]="{required:modus == 'angebot' || modus == 'antrag'}" placeholder="Geburtsdatum" aria-label="Geburtsdatum" [(ngModel)]="vn.geburtsdatum" #vnGeburtsdatum="ngModel" [required]="modus == 'angebot' || modus == 'antrag' ? 'required' : null" useValueAsDate />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnGeburtsdatum.invalid && (vnGeburtsdatum.dirty || vnGeburtsdatum.touched)">
-                        <span *ngIf="vnGeburtsdatum.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <!-- Strasse / Nr -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / KFZ / HE / RS -->
-                <label for="vnStrasseNr" class="col-md-4 control-label">Straße/Nr.:</label>
-                <div class="col-md-8">
-                    <input type="text" id="vnStrasseNr" name="vnStrasseNr" class="form-control" [ngClass]="{required:modus == 'antrag'}" placeholder="Straße/Nr." aria-label="Straße/Nr." [(ngModel)]="vn.adresse.strasseNr" #vnAdresseStrasseNr="ngModel" [required]="modus == 'antrag' ? 'required' : null" />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnAdresseStrasseNr.invalid && (vnAdresseStrasseNr.dirty || vnAdresseStrasseNr.touched)">
-                        <span *ngIf="vnAdresseStrasseNr.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- PLZ/Ort -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / R -->
-                <label for="vnPlz" class="col-md-4 control-label">PLZ/Ort:</label>
-                <!-- PLZ -->
-                <div class="col-md-3">
-                    <input type="text" id="vnPlz" name="vnPlz" class="form-control" [ngClass]="{required: modus == 'angebot' || modus == 'antrag'}" placeholder="PLZ" aria-label="Plz" [(ngModel)]="vn.adresse.plz" #vnAdressePlz="ngModel" [required]="modus == 'angebot' || modus == 'antrag' ? 'required' : null" />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnAdressePlz.invalid && (vnAdressePlz.dirty || vnAdressePlz.touched)">
-                        <span *ngIf="vnAdressePlz.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-                <!-- Ort -->
-                <div class="col-md-5">
-                    <input type="text" id="vnOrt" name="vnOrt" class="form-control" [ngClass]="{required:modus == 'antrag'}" placeholder="Ort" aria-label="Ort" [(ngModel)]="vn.adresse.ort" #vnAdresseOrt="ngModel" [required]="modus == 'antrag' ? 'required' : null" />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnAdresseOrt.invalid && (vnAdresseOrt.dirty || vnAdresseOrt.touched)">
-                        <span *ngIf="vnAdresseOrt.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- Tel -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnTel" class="col-md-4 control-label">Telefon:</label>
-                <div class="col-md-8">
-                    <input type="text" id="vnTel" name="vnTel" class="form-control" placeholder="Tel" aria-label="Tel" [(ngModel)]="vn.kontakt.tel" />
-                </div>
-            </div>
-            <!-- Mobil -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnMobil" class="col-md-4 control-label">Mobil:</label>
-                <div class="col-md-8">
-                    <input type="text" id="vnMobil" name="vnMobil" class="form-control" placeholder="Mobil" aria-label="Mobil" [(ngModel)]="vn.kontakt.mobil" />
-                </div>
-            </div>
-            <!-- EMail -->
-            <div class="form-group form-group-sm">
-                <!-- FP / KV / UV / UVK / KFZ / HE / RS -->
-                <label for="vnEmail" class="col-md-4 control-label">E-Mail:</label>
-                <div class="col-md-8">
-                    <input type="text" id="vnEmail" name="vnEmail" class="form-control" placeholder="E-Mail" aria-label="E-Mail" [(ngModel)]="vn.kontakt.email" />
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <!-- Familienstand -->
-            <div class="form-group form-group-sm" *ngIf="(isEnabledPFp || isEnabledPKv)">
-                <!-- FP / KV -->
-                <label for="vnFamilienstandLedig" class="col-md-4 control-label">Familienstand:</label>
-                <div class="col-md-8">
-                    <label class="radio-inline">
-                        <input type="radio" id="vnFamilienstand_Ledig" name="vnFamilienstand" [value]="1" [(ngModel)]="vn.familienstand" /> ledig
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" id="vnFamilienstand_Verheiratet" name="vnFamilienstand" [value]="2" [(ngModel)]="vn.familienstand" /> verheiratet
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" id="vnFamilienstand_Geschieden" name="vnFamilienstand" [value]="3" [(ngModel)]="vn.familienstand" /> geschieden
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" id="vnFamilienstand_Verwitwet" name="vnFamilienstand" [value]="4" [(ngModel)]="vn.familienstand" /> verwitwet
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" id="vnFamilienstand_Lebensgemeinschaft" name="vnFamilienstand" [value]="5" [(ngModel)]="vn.familienstand" /> Lebensgemeinschaft
-                    </label>
-                </div>
-            </div>
-            <!-- SVAnstalt / SVNr -->
-            <div class="form-group form-group-sm" *ngIf="(isEnabledPFp || isEnabledPKv)">
-                <!-- FP / KV / UV / UVK -->
-                <label for="vnSvAnstalt" class="col-md-4 control-label">SV-Anstalt/Nr:</label>
-                <!-- SVAnstalt -->
-                <div class="col-md-4">
-                    <select id="vnSvAnstalt" name="vnSvAnstalt" class="form-control" [ngClass]="{required:modus == 'antrag'}" aria-label="SV-Anstalt" [(ngModel)]="vn.svAnstalt" #vnSvAnstalt="ngModel" [required]="modus == 'antrag' ? 'required' : null">
-                        <option [value]="0" disabled selected hidden>SV-Anstalt</option>
-                        <option [value]="1">GKK</option>
-                        <option [value]="2">KFA</option>
-                        <option [value]="3">GSKK/SL</option>
-                        <option [value]="4">GSKK/GL</option>
-                        <option [value]="5">BVA</option>
-                        <option [value]="6">VAEB</option>
-                        <option [value]="7">SVB</option>
-                        <option [value]="8">BKK</option>
-                        <option [value]="9">KFG</option>
-                    </select>
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnSvAnstalt.invalid && (vnSvAnstalt.dirty || vnSvAnstalt.touched)">
-                        <span *ngIf="vnSvAnstalt == 0">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-                <!-- SVNr -->
-                <div class="col-md-4">
-                    <input type="text" id="vnSvNr" name="vnSvNr" class="form-control" [ngClass]="{required:modus == 'antrag'}" placeholder="SV-Nummer" aria-label="Titel" [(ngModel)]="vn.svNr" #vnSvNr="ngModel" [required]="modus == 'antrag' ? 'required' : null" />
-                    <div class="alert alert-danger" style="margin-top:5px;" role="alert" *ngIf="vnSvNr.invalid && (vnSvNr.dirty || vnSvNr.touched)">
-                        <span *ngIf="vnSvNr.errors.required">
-                            Pflichtfeld!
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- Hausarzt -->
-            <div class="form-group form-group-sm" *ngIf="(isEnabledPFp || isEnabledPKv)">
-                <!-- FP / KV -->
-                <label for="vnHausarzt" class="col-md-4 control-label">Hausarzt:</label>
-                <div class="col-md-8">
-                    <textarea id="vnHausarzt" name="vnHausarzt" class="form-control" rows="3" placeholder="Name, Adresse, Telefonnummer des Hausarztes" aria-label="Name, Adresse, Telefonnummer des Hausarztes" [(ngModel)]="vn.hausarzt"></textarea>
-                </div>
-            </div>
+    <div class="btn-group btn-group-xs">
+        <div class="btn-group" dropdown>
+            <button type="button" class="btn btn-primary btn-xs" title="Versicherte Person NEU..." dropdownToggle><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> versicherte Person <span class="caret" aria-hidden="true"></span></button>
+            <ul *dropdownMenu class="dropdown-menu" role="menu">
+                <li role="menuitem"><a href="#">Einzelperson</a></li>
+                <li role="menuitem"><a href="#">Alleinerzieher</a></li>
+                <li role="menuitem"><a href="#">Partner</a></li>
+                <li role="menuitem"><a href="#">Familie</a></li>
+                <li role="separator" class="divider"></li>
+                <li role="menuitem"><a href="#">weiteres Kind</a></li>
+            </ul>
         </div>
     </div>
-
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
