--- a/Bootstrap01.html
+++ b/Bootstrap01.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,23 +7,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Hello, world!</title>
   </head>
-  <body>
-    
-    <div class="btn-group btn-group-xs">
-        <div class="btn-group" dropdown>
-            <button type="button" class="btn btn-primary btn-xs" title="Versicherte Person NEU..." dropdownToggle><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> versicherte Person <span class="caret" aria-hidden="true"></span></button>
-            <ul *dropdownMenu class="dropdown-menu" role="menu">
-                <li role="menuitem"><a href="#">Einzelperson</a></li>
-                <li role="menuitem"><a href="#">Alleinerzieher</a></li>
-                <li role="menuitem"><a href="#">Partner</a></li>
-                <li role="menuitem"><a href="#">Familie</a></li>
-                <li role="separator" class="divider"></li>
-                <li role="menuitem"><a href="#">weiteres Kind</a></li>
-            </ul>
-        </div>
+<body>
+<div class="container mt-5">
+  <h2>Registrierungsformular</h2>
+  <form>
+    <!-- ID - Dieses Feld könnte ausgeblendet werden, da die ID automatisch vergeben wird -->
+    <div class="mb-3">
+      <label for="userId" class="form-label">ID (wird automatisch vergeben)</label>
+      <input type="text" class="form-control" id="userId" placeholder="ID" disabled>
     </div>
-
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+    <!-- Geschlecht Dropdown -->
+    <div class="mb-3">
+      <label for="genderSelect" class="form-label">Geschlecht</label>
+      <select class="form-select" id="genderSelect">
+        <option selected>Wähle...</option>
+        <option value="male">Männlich</option>
+        <option value="female">Weiblich</option>
+        <option value="diverse">Divers</option>
+      </select>
+    </div>
+    <!-- Vorname Input -->
+    <div class="mb-3">
+      <label for="firstName" class="form-label">Vorname</label>
+      <input type="text" class="form-control" id="firstName" placeholder="Vorname">
+    </div>
+    <!-- Nachname Input -->
+    <div class="mb-3">
+      <label for="lastName" class="form-label">Nachname</label>
+      <input type="text" class="form-control" id="lastName" placeholder="Nachname">
+    </div>
+    <!-- Geburtstag mit Datepicker -->
+    <div class="mb-3">
+      <label for="birthday" class="form-label">Geburtstag</label>
+      <input type="date" class="form-control" id="birthday">
+    </div>
+    <!-- Submit Button -->
+    <button type="submit" class="btn btn-primary">Registrieren</button>
+  </form>
+</div>
+</body>
 </html>
