--- a/index.html
+++ b/index.html
@@ -1,78 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--CSS file hinzufügen-->
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-
-<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Versicherungsnehmer Formular</title>
 </head>
-
 <body>
-  <p>Einfacher Css Test ALT + Shift + F</p>
-  <h1>Auto Format: ALT + Shift + F</h1>
-
-  <!--Testeintrag!! Mit Vanille Souße Hahhah-->
-  <!-- As a link -->
-  <nav class="navbar navbar-dark bg-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand" target="_blank"
-        href="https://www.youtube.com/watch?v=V0bXqLxIivo&list=PL_bZpVNUyGJAb6LT7lUgL25huyBA2jL7z&index=1&t=195s">Lerne
-        Git in 30 Minuten // Git Tutorial Deutsch
-      </a>
+    <div class="container mt-5" style="border: 2px solid #756969; padding: 20px; border-radius: 5px;">
+        <h2>Versicherungsnehmer</h2>
+        <form>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <label for="customerNumber" class="form-label">Kundennummer:</label>
+                    <input type="text" class="form-control" id="customerNumber">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="title" class="form-label">Anrede/Titel:</label>
+                    <select class="form-select" id="title">
+                        <option selected>Titel</option>
+                        <option value="Herr">Herr</option>
+                        <option value="Frau">Frau</option>
+                    </select>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="firstName" class="form-label">Vorname:</label>
+                    <input type="text" class="form-control" id="firstName">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <label for="lastName" class="form-label">Nachname:</label>
+                    <input type="text" class="form-control" id="lastName">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="dob" class="form-label">Geburtsdatum:</label>
+                    <input type="date" class="form-control" id="dob">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="nationality" class="form-label">Nationalität:</label>
+                    <input type="text" class="form-control" id="nationality" value="AUT" readonly>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <label for="street" class="form-label">Straße/Nr.:</label>
+                    <input type="text" class="form-control" id="street">
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="city" class="form-label">PLZ/Ort:</label>
+                    <input type="text" class="form-control" id="city">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <label for="phone" class="form-label">Telefon:</label>
+                    <input type="tel" class="form-control" id="phone">
+                </div>
+                <div class="col-md-2 mb-3">
+                    <label for="mobile" class="form-label">Mobil:</label>
+                    <input type="tel" class="form-control" id="mobile">
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">E-Mail:</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+            <div class="mb-3">
+                <label for="familyStatus" class="form-label">Familienstand:</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="familyStatus" id="single" value="single" checked>
+                    <label class="form-check-label" for="single">ledig</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="familyStatus" id="married" value="married">
+                    <label class="form-check-label" for="married">verheiratet</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="familyStatus" id="divorced" value="divorced">
+                    <label class="form-check-label" for="divorced">geschieden</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="familyStatus" id="widowed" value="widowed">
+                    <label class="form-check-label" for="widowed">verwitwet</label>
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="iban" class="form-label">IBAN:</label>
+                <input type="text" class="form-control" id="iban">
+            </div>
+            <div class="mb-3">
+                <label for="bic" class="form-label">BIC:</label>
+                <input type="text" class="form-control" id="bic">
+            </div>
+            <button type="submit" class="btn btn-primary">Übernehmen</button>
+            <button type="button" class="btn btn-secondary">Abbrechen</button>
+        </form>
     </div>
-  </nav>
-
-  <!--Select-->
-  <select class="form-select" aria-label="Default select example">
-    <option selected>Open this select menu</option>
-    <option value="1">Oans</option>
-    <option value="2">Zwoa</option>
-    <option value="3">Drei</option>
-    <option value="4">Vier</option>
-  </select>
-
-  <!--blablaBlablal-->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-    Öffne Modal
-  </button>
-
-  <!-- Hier ist Ihr Modal-Code aus der vorherigen Antwort -->
-<div class="modal" id="myModal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal-Titel</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <!-- Hier können Sie Ihre Inhalte einfügen -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
-        <button type="button" class="btn btn-primary">Speichern</button>
-      </div>
-    </div>
-  </div></div>
-  
-
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
