--- a/bootstrap.html
+++ b/bootstrap.html
@@ -115,6 +115,57 @@
                     </div>
                 </div>
             </div>
+            <div class="col">
+                <div class="card" >
+                    <div class="card-body">                  
+                            <form>
+                                <h5>Zusätzliche angaben</h5>
+                                <div class="mb-3">
+                                    <label for="anrede" class="form-label">Anrede</label>
+                                    <select id="anrede" class="form-select">
+                                        <option value="Herr">Herr</option>
+                                        <option value="Frau">Frau</option>
+                                        <option value="Divers">Divers</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="titel" class="form-label">Titel</label>
+                                    <input type="text" class="form-control" id="titel">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="vorname" class="form-label">Vorname</label>
+                                    <input type="text" class="form-control" id="vorname" value="Franz">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nachname" class="form-label">Nachname <span
+                                            class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" id="nachname" value="Bechtel">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="partnerVorname" class="form-label">Partner Vorname</label>
+                                    <input type="text" class="form-control" id="partnerVorname">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="partnerNachname" class="form-label">Partner Nachname</label>
+                                    <input type="text" class="form-control" id="partnerNachname">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nameZusatz1" class="form-label">Name Zusatz 1</label>
+                                    <input type="text" class="form-control" id="nameZusatz1" value="Klimatechnik">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nameZusatz2" class="form-label">Name Zusatz 2</label>
+                                    <input type="text" class="form-control" id="nameZusatz2">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="briefanrede" class="form-label">Briefanrede</label>
+                                    <textarea class="form-control" id="briefanrede"
+                                        rows="2">Sehr geehrter Herr Bechtel,</textarea>
+                                </div>
+                            </form>                 
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
